k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: digital-inspection
  labels:
    name: digital-inspection
    environment: production
